...
          headerTitle: TitleComponent,
        }}
      >
        <Tabs.Screen
          name="index"
          options={{
            title: "Timetable",
            tabBarIcon: TimetableComponent,
          }}
        />
        <Tabs.Screen
          name="settings"
          options={{
...
            tabBarIcon: SettingsComponent,
          }}
        />
        <Tabs.Screen
          name="program"
          options={{
            title: "Program",
            tabBarIcon: ProgramComponent,
          }}
        />
      </Tabs>
    </>
  );
...
